--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wixpress.media-cloud</groupId>
-    <artifactId>video-player-js</artifactId>
+    <artifactId>video-player.js</artifactId>
     <packaging>pom</packaging>
-    <name>video-player-js</name>
-    <description>video-player-js</description>
+    <name>video-player.js</name>
+    <description>video-player.js</description>
     <version>1.0.0-SNAPSHOT</version>
 
     <parent>
