Converting UI into class and adding event emitter

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "release": "wnpm-release"
   },
   "dependencies": {
+    "eventemitter3": "^2.0.2",
     "jbone": "^1.2.0",
     "vidi": "latest"
   },
