--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dot": "latest",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
-    "wix-node-build": "kupriyanenko/wix-node-build"
+    "wix-node-build": "latest"
   },
   "babel": {
     "presets": [
@@ -38,10 +38,7 @@
   },
   "wix": {
     "separateCss": false,
-    "output": {
-      "library": "VideoPlayer",
-      "libraryTarget": "umd"
-    },
+    "exports": "VideoPlayer",
     "entry": {
       "video-player": "./index.js"
     }
