--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vidi-demo",
+  "name": "video-player-demo",
   "version": "0.1.0",
-  "homepage": "https://wix.github.io/vidi",
+  "homepage": "https://wix-private.github.io/video-player.js",
   "private": true,
   "devDependencies": {
     "gh-pages": "0.12.0",
