--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "eventemitter3": "^2.0.2",
     "jbone": "^1.2.0",
-    "vidi": "latest"
+    "vidi": "^0.5.0"
   },
   "private": false,
   "devDependencies": {
