--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "email": "oleksiim@wix.com"
   },
   "main": "dist/statics/video-player.bundle.js",
+  "module": "dist/src/index.js",
+  "jsnext:main": "dist/src/index.js",
   "files": [
     "dist",
     "src"
