--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "precommit": "npm run lint && npm run csscomb:lint && npm test"
   },
   "dependencies": {
+    "css-element-queries": "^0.4.0",
     "eventemitter3": "^2.0.2",
     "jbone": "^1.2.0",
     "vidi": "^0.5.0"
