--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "awilix": "^2.4.0",
+    "classnames": "^2.2.5",
     "css-element-queries": "^0.4.0",
     "eventemitter3": "^2.0.2",
     "jbone": "^1.2.0",
