Adding organization in pom

--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,7 @@
             </roles>
         </developer>
     </developers>
+    <organization>
+      <name>Videos</name>
+    </organization>
 </project>
