Changes in logic of picking first stream

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint": "yoshi lint",
     "csscomb": "csscomb src/.",
     "csscomb:lint": "csscomb -lv src/.",
-    "test": "yoshi test --mocha && node ./test/boot-mediaserver-and-test",
+    "test:unit": "yoshi test --mocha",
+    "test:playback": "node ./test/boot-mediaserver-and-test",
+    "test": "npm run test:unit && npm run test:playback",
     "build": "yoshi build",
     "deploy": "yoshi build && gh-pages -d dist/statics",
     "release": "yoshi release",
