--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "private": false,
   "devDependencies": {
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "~6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "~3.5.0",
@@ -54,6 +55,9 @@
     "presets": [
       "es2015",
       "stage-0"
+    ],
+    "plugins": [
+      "transform-decorators-legacy"
     ]
   },
   "yoshi": {
@@ -62,7 +66,7 @@
     "exports": "VideoPlayer",
     "entry": {
       "video-player": "./index.js",
-      "video-player-test": "./playback-test.js"
+      "video-player-test": "./e2e/playback-test.js"
     },
     "externalUnprocessedModules": []
   },
