Changed .global.scss to :global selector

--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
       "video-player-test": "./e2e/playback-test.js",
       "video-player-develop": "./develop.js"
     },
-    "externalUnprocessedModules": ["ally.js"]
+    "externalUnprocessedModules": [
+      "ally.js"
+    ]
   },
   "keywords": [
     "player",
