--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "npm run test:unit && npm run test:playback",
     "build": "yoshi build",
     "deploy": "yoshi build && gh-pages -d dist/statics",
-    "release": "yoshi release",
+    "release": "yoshi release && gh-pages -d dist/statics",
     "precommit": "npm run lint && npm run csscomb:lint && npm run build && npm test"
   },
   "dependencies": {
