--- a/video-player-cards/package.json
+++ b/video-player-cards/package.json
@@ -8,9 +8,11 @@
     "url": ""
   },
   "main": "dist/src/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "start": "yoshi start",
+    "start": "yoshi start --entry-point=./server/start-fake-server.js",
     "build": ":",
     "precommit": "yoshi lint",
     "pretest": "yoshi build",
@@ -19,23 +21,40 @@
     "release": "yoshi release"
   },
   "dependencies": {
-    "babel-runtime": "^6.22.0"
+    "babel-runtime": "^6.22.0",
+    "video-player": "^1.0.403"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-stage-3": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-es2015": "~6.9.0",
     "chai": "^3.5.0",
     "husky": "^0.13.4",
     "yoshi": "latest"
   },
+  "yoshi": {
+    "separateCss": false,
+    "exports": "SingularModule",
+    "entry": {
+      "singular-module": "./index.js",
+      "player-with-module": "./registered-module.js"
+    },
+    "externalUnprocessedModules": [
+      "ally.js",
+      "video-player"
+    ]
+  },
   "babel": {
-    "presets": ["stage-3"],
-    "plugins": ["transform-runtime"],
-    "env": {
-      "test": {"presets": [["env", {"targets": {"node": "current"}}]]},
-      "development": {"presets": ["env"]}
-    }
+    "presets": [
+      "es2015",
+      "stage-0"
+    ],
+    "plugins": [
+      "transform-decorators-legacy",
+      "transform-runtime"
+    ]
   },
   "eslintConfig": {
     "extends": "wix/esnext"
