--- a/video-player-cards/package.json
+++ b/video-player-cards/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "yoshi start --entry-point=./server/start-fake-server.js",
     "build": ":",
+    "lint": "yoshi lint",
     "precommit": "yoshi lint",
     "pretest": "yoshi build",
     "test": "yoshi test",
