Add close buttom on cards

--- a/video-player-cards/package.json
+++ b/video-player-cards/package.json
@@ -25,6 +25,7 @@
     "release": "yoshi release"
   },
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "video-player": "^1.0.403"
   },
   "devDependencies": {
