--- a/video-player-cards/package.json
+++ b/video-player-cards/package.json
@@ -13,7 +13,8 @@
   ],
   "scripts": {
     "start": "yoshi start --entry-point=./server/start-fake-server.js",
-    "build": ":",
+    "build": "yoshi build",
+    "deploy": "yoshi build && gh-pages -d dist/statics",
     "lint": "yoshi lint",
     "csscomb": "csscomb src/.",
     "csscomb:lint": "csscomb -lv src/.",
