--- a/video-player-cards/package.json
+++ b/video-player-cards/package.json
@@ -9,7 +9,8 @@
   },
   "main": "dist/src/index.js",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "start": "yoshi start --entry-point=./server/start-fake-server.js",
