--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "css-element-queries": "^0.4.0",
-    "dashjs": "^2.5.0",
+    "dashjs": "2.6.0",
     "eventemitter3": "^2.0.3",
     "hls.js": "^0.7.9",
     "jbone": "^1.2.0",
