--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "jbone": "^1.2.0",
     "lodash": "^4.17.4"
   },
-  "private": false,
   "devDependencies": {
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -88,5 +87,7 @@
   },
   "publishConfig": {
     "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
-  }
+  },
+  "private": false,
+  "unpkg": true
 }
