--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "video-player-cards"
   ],
   "scripts": {
-    "start": "yoshi start --entry-point=./dev-env/start-dev-env.js",
+    "start": "PORT=5000 yoshi start --entry-point=./dev-env/start-dev-env.js",
     "lint": "yoshi lint",
     "csscomb": "csscomb src/.",
     "csscomb:lint": "csscomb -lv src/.",
