--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "css-element-queries": "^0.4.0",
-    "dashjs": "2.6.0",
+    "dashjs": "latest",
     "eventemitter3": "^2.0.3",
-    "hls.js": "^0.7.9",
+    "hls.js": "latest",
     "jbone": "^1.2.0",
     "lodash": "^4.17.4"
   },
