--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,13 @@
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-catch-links": "^1.0.9",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-transformer-remark": "^1.7.21"
+    "gatsby-plugin-typography": "^1.7.10",
+    "gatsby-remark-autolink-headers": "^1.4.8",
+    "gatsby-remark-external-links": "^0.0.3",
+    "gatsby-remark-prismjs": "^1.2.9",
+    "gatsby-source-filesystem": "^1.5.8",
+    "gatsby-transformer-remark": "^1.7.21",
+    "prop-types": "^15.6.0"
   },
   "keywords": [
     "gatsby"
@@ -18,7 +24,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --single-quote --write \"**/*.js\"",
+    "format": "prettier --trailing-comma es5 --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
