[VP-77] player api documentation generation

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "npm run tslint:all",
     "build": "yoshi build",
     "test": "npm run test:unit && npm run test:playback",
+    "documentation": "ts-node ./scripts/documentation > ./API.md",
     "deploy": "yoshi build && gh-pages -d dist/statics",
     "release": "yoshi release",
     "tslint": "tslint -c tslint.json",
@@ -51,13 +52,20 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@babel/generator": "^7.0.0-beta.32",
+    "@babel/template": "^7.0.0-beta.32",
+    "@babel/traverse": "^7.0.0-beta.32",
+    "@babel/types": "^7.0.0-beta.32",
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.44",
+    "babylon": "7.0.0-beta.32",
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
+    "documentation": "^5.3.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "gh-pages": "^0.12.0",
+    "glob": "^7.1.2",
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
