[VP-77] add tslint rule for methods with `playerAPI` decorator

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "documentation:gitadd": "npm run documentation && git add ./API.md",
     "deploy": "yoshi build && gh-pages -d dist/statics",
     "release": "yoshi release",
-    "tslint": "tslint -c tslint.json",
+    "tslint": "ts-node node_modules/.bin/tslint -c tslint.json",
     "tslint:all": "npm run tslint -- 'src/**/*.ts'",
     "prettier": "prettier --config .prettierrc --write",
-    "prettier:all": "npm run prettier -- 'src/**/*.ts'",
+    "prettier:all": "npm run prettier -- '{src,scripts,tslint-rules}/**/*.ts'",
     "csscomb:all": "csscomb src/.",
     "test:playback": "node ./dev-env/boot-devserver-and-test.js",
     "test:unit": "yoshi test --mocha",
