change site dir. use `ROOT_DIR/docs` as doc `md` files root.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint": "npm run tslint:all",
     "build": "haste build",
     "test": "npm run test:unit && npm run test:playback",
-    "documentation": "ts-node ./scripts/documentation > ./API.md",
-    "documentation:gitadd": "npm run documentation && git add ./API.md",
+    "documentation": "ts-node ./scripts/documentation > ./docs/player-public-methods.md",
+    "documentation:gitadd": "npm run documentation && git add ./docs/player-public-methods.md",
     "deploy": "./scripts/site.sh --deploy",
     "release": "haste release",
     "tslint": "ts-node node_modules/.bin/tslint -p . -c tslint.json",
