--- a/site-gatsby/package.json
+++ b/site-gatsby/package.json
@@ -14,6 +14,7 @@
     "gatsby-remark-prismjs": "^1.2.9",
     "gatsby-source-filesystem": "^1.5.8",
     "gatsby-transformer-remark": "^1.7.21",
+    "github-slugger": "^1.2.0",
     "prop-types": "^15.6.0"
   },
   "keywords": [
