--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "@babel/generator": "^7.0.0-beta.32",
-    "@babel/template": "^7.0.0-beta.32",
-    "@babel/traverse": "^7.0.0-beta.32",
-    "@babel/types": "^7.0.0-beta.32",
-    "@types/chai": "^4.0.4",
+    "@babel/generator": "^7.0.0-beta.34",
+    "@babel/template": "^7.0.0-beta.34",
+    "@babel/traverse": "^7.0.0-beta.34",
+    "@babel/types": "^7.0.0-beta.34",
+    "@types/chai": "^4.0.8",
     "@types/mocha": "^2.2.44",
-    "babylon": "7.0.0-beta.32",
+    "babylon": "^7.0.0-beta.34",
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
     "documentation": "^5.3.3",
@@ -68,11 +68,11 @@
     "gh-pages": "^0.12.0",
     "glob": "^7.1.2",
     "haste-cli": "~0.1.16",
-    "haste-preset-yoshi": "0.0.10",
+    "haste-preset-yoshi": "^1.0.4",
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
-    "prettier": "1.8.2",
+    "prettier": "^1.9.0",
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
