[VP-96] PoC component templates via dotjs templates + innerHTML + precomilation via webpack loader

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "classnames": "^2.2.5",
     "css-element-queries": "^0.4.0",
     "dashjs": "latest",
+    "dot": "^1.1.2",
     "eventemitter3": "^2.0.3",
     "hls.js": "latest",
     "jbone": "^1.2.0",
@@ -62,6 +63,7 @@
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
     "documentation": "^5.3.3",
+    "dotjs-loader": "https://github.com/bodia-uz/dotjs-loader.git",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "glob": "^7.1.2",
