cleanup unused code

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "documentation:gitadd": "npm run documentation && git add ./API.md",
     "deploy": "./scripts/site.sh --deploy",
     "release": "haste release",
-    "tslint": "ts-node node_modules/.bin/tslint -c tslint.json",
-    "tslint:all": "npm run tslint -- 'src/**/*.ts'",
+    "tslint": "ts-node node_modules/.bin/tslint -p . -c tslint.json",
+    "tslint:all": "npm run tslint -- '{src,scripts}/**/*.ts'",
     "prettier": "prettier --config .prettierrc --write",
     "prettier:all": "npm run prettier -- '{src,scripts,tslint-rules}/**/*.ts'",
     "csscomb:all": "csscomb src/.",
