--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": false,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "target": "es5",
     "lib": ["dom", "es2016", "es2017"],
     "types": ["mocha", "chai", "node"]
@@ -15,6 +17,7 @@
   "files": [
     "./src/index.ts",
     "./src/develop.ts",
-    "./src/e2e/playback-test.ts"
+    "./src/e2e/playback-test.ts",
+    "./scripts/documentation/index.ts"
   ]
 }
