add docsearch to gatsby

--- a/site-gatsby/package.json
+++ b/site-gatsby/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.5",
+    "docsearch.js": "^2.5.2",
     "gatsby": "^1.9.117",
     "gatsby-link": "^1.6.28",
     "gatsby-plugin-catch-links": "^1.0.9",
