--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
     "documentation": "^5.3.3",
-    "dotjs-loader": "https://github.com/bodia-uz/dotjs-loader.git",
+    "dotjs-loader": "https://github.com/bodia-uz/dotjs-loader.git#e08a0f9",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "glob": "^7.1.2",
