move player example sandbox PoC to gatsby

--- a/site-gatsby/package.json
+++ b/site-gatsby/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^1.5.8",
     "gatsby-transformer-remark": "^1.7.21",
     "github-slugger": "^1.2.0",
+    "jbone": "^1.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
