--- a/site/package.json
+++ b/site/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "video-player-site",
+  "description": "video-player.js site",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.5",
     "docsearch.js": "^2.5.2",
@@ -11,13 +10,16 @@
     "gatsby-plugin-catch-links": "^1.0.9",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-typography": "^1.7.10",
+    "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-autolink-headers": "^1.4.8",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-prismjs": "^1.2.9",
     "gatsby-source-filesystem": "^1.5.8",
     "gatsby-transformer-remark": "^1.7.21",
     "github-slugger": "^1.2.0",
+    "gh-pages": "^1.1.0",
     "jbone": "^1.2.1",
+    "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -29,13 +31,10 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "gatsby-plugin-sass": "^1.0.15",
-    "prettier": "^1.8.2"
   }
 }
