--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "eventemitter3": "^2.0.3",
     "hls.js": "latest",
     "jbone": "^1.2.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {
     "@babel/generator": "^7.0.0-beta.34",
