--- a/site/package.json
+++ b/site/package.json
@@ -18,12 +18,12 @@
     "gatsby-transformer-remark": "^1.7.21",
     "gh-pages": "^1.1.0",
     "github-slugger": "^1.2.0",
-    "jbone": "^1.2.1",
     "prettier": "^1.8.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-modal": "^3.1.10"
   },
   "keywords": [
     "gatsby"
