migrate to `https://github.com/wix-private/wix-haste-preset-yoshi-video-player`

--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "classnames": "^2.2.5",
     "css-element-queries": "^0.4.0",
     "dashjs": "latest",
-    "dot": "^1.1.2",
     "eventemitter3": "^2.0.3",
     "hls.js": "latest",
     "jbone": "^1.2.0",
@@ -63,11 +62,11 @@
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
     "documentation": "^5.3.3",
-    "dotjs-loader": "https://github.com/bodia-uz/dotjs-loader.git#e08a0f9",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "glob": "^7.1.2",
-    "haste-preset-yoshi": "^1.0.15",
+    "haste-cli": "~0.1.16",
+    "haste-preset-yoshi": "git@github.com:wix-private/wix-haste-preset-yoshi-video-player.git#d4455d4",
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
