--- a/package.json
+++ b/package.json
@@ -52,20 +52,20 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "@babel/generator": "^7.0.0-beta.34",
-    "@babel/template": "^7.0.0-beta.34",
-    "@babel/traverse": "^7.0.0-beta.34",
-    "@babel/types": "^7.0.0-beta.34",
+    "@babel/generator": "7.0.0-beta.34",
+    "@babel/template": "7.0.0-beta.34",
+    "@babel/traverse": "7.0.0-beta.34",
+    "@babel/types": "7.0.0-beta.34",
     "@types/chai": "^4.0.8",
     "@types/mocha": "^2.2.44",
-    "babylon": "^7.0.0-beta.34",
+    "babylon": "7.0.0-beta.34",
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
     "documentation": "^5.3.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "glob": "^7.1.2",
-    "haste-preset-yoshi": "git@github.com:wix-private/wix-haste-preset-yoshi-video-player.git#148b05a",
+    "haste-preset-yoshi": "git+ssh://git@github.com/wix-private/wix-haste-preset-yoshi-video-player.git#148b05a",
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
