okidoc - base work

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "haste build",
     "build:production": "NODE_ENV=production haste build",
     "test": "npm run test:unit",
-    "documentation": "ts-node ./scripts/documentation > ./docs/player-public-methods.md",
+    "documentation": "okidoc ./docs/docs.yml ./docs",
     "documentation:gitadd": "npm run documentation && git add ./docs/player-public-methods.md",
     "deploy": "cd site && npm run deploy",
     "release": "haste release",
@@ -70,6 +70,7 @@
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
+    "okidoc": "git+ssh://git@github.com/wix-private/okidoc.git#cli",
     "prettier": "^1.9.0",
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
