okidoc - develop/build/deploy docs site

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "build:production": "NODE_ENV=production haste build",
     "test": "npm run test:unit",
     "documentation": "okidoc ./docs/docs.yml ./docs",
-    "documentation:gitadd": "npm run documentation && git add ./docs/player-public-methods.md",
+    "documentation:gitadd": "npm run documentation && git add ./docs",
+    "documentation:site": "okidoc-site develop ./docs/site.yml",
+    "documentation:site:build": "okidoc-site build ./docs/site.yml",
+    "documentation:site:deploy": "okidoc-site deploy ./docs/site.yml",
     "deploy": "cd site && npm run deploy",
     "release": "haste release",
     "tslint": "ts-node node_modules/.bin/tslint -p . -c tslint.json",
